# cmake_watcher

./: .gitignore  CMakeLists.txt  README.md  build_watcher.bash  conanfile.txt  watcher.conf.json
lib/ncurses/: config.status  edit_man.sh
lib/ncurses/c++/: Makefile  demo
lib/ncurses/man/: Makefile
lib/ncurses/ncurses/: Makefile  make_hash  make_keys  report_offsets
lib/ncurses/progs/: Makefile  clear  infocmp  tabs  tic  toe  tput  tset
lib/ncurses/test/: Makefile  background  blue  bs  cardfile  chgat  clip_printw  color_set  demo_altkeys  demo_defkey  demo_forms  demo_keyok  demo_menus  demo_new_pair  demo_panels  demo_termcap  demo_terminfo  ditto  dots  dots_curses  dots_mvcur  dots_termcap  echochar  filter  firework  firstlast  foldkeys  form_driver_w  gdc  hanoi  hashtest  inch_wide  inchs  insdelln  inserts  keynames  knight  list_keys  lrtest  movewindow  (+27 more)
src/: FileWatcher.cpp  FileWatcher.hpp  KeyboardWatcher.cpp  KeyboardWatcher.hpp  ProgramHandler.cpp  ProgramHandler.hpp  config.h.in  main.cpp
